# R3DMatch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEV_SETUP.md  LOCAL_RED_SDK_SETUP.md  R3DMatch_launch.py  R3DMatch_v4_Review_and_Plan.md  R3DMatch_v4_STATUS.md  README.md  REDline  build_app.command  macbeth_diag.py  probe_rw_ceiling.py  pyproject.toml  repo_file_list.txt  requirements.txt  requirements_v5.txt  setup_app.py  setup_venv.command
assets/: R3DMatch.icns
calibration_card/: gray_card_calibration.json  gray_card_detection.json
configs/: train_4d.yaml
cpp/r3d_sdk_wrapper/: CMakeLists.txt
cpp/r3d_sdk_wrapper/src/: module.cpp
docs/: .~lock.R3DMatch_v4_Reference.pdf#  R3DMatch_v4_Reference.docx  analysis_layer_scientific_traceability_handoff.md  analysis_layer_scientific_traceability_handoff_2.md  architecture.md  contact_sheet_redesign_handoff.md  contact_sheet_unification_handoff.md  desktop_redline_persistence_dark_theme_handoff_1.md  desktop_stability_packaged_tiff_handoff_1.md  desktop_tiff_jpeg_ui_refinement_handoff_1.md  desktop_tiff_output_handoff_1.md  desktop_ui_migration_handoff_1.md  desktop_ui_migration_handoff_2.md  exposure_analysis_architecture_lock_handoff.md  exposure_pipeline_proof.md  ftps_ingest_packaging_handoff.md  lightweight_ipp2_first_handoff.md  lightweight_ipp2_measurement_optimization_handoff.md  lightweight_measurement_domain_handoff.md  lightweight_review_startup_handoff.md  lu415z7jq.tmp  matching-modes.md  operational_handoff.md  packaged_red_runtime_browse_handoff.md  packaged_runtime_hardening_handoff.md  rcp2.md  red_sdk_external_setup_handoff.md  redline_operator_config_handoff.md  results_binding_gray_target_handoff_1.md  runtime_launch_handoff.md  scan_render_debug_handoff.md  sphere_detection_original_cast_handoff_2.md  sphere_detection_packaging_language_handoff_1.md  ui_decision_language_handoff.md  ui_lightweight_runtime_handoff.md  ui_post_run_status_handoff.md  validation-plan.md  verification.md  wb_chart_truth_handoff.md  workflows.md
docs/v3_reference/: ARCHITECTURE.md  INSTALL.md  R3DMatch_v3_Handoff.md
out_scene/: summary.json
out_scene/analysis/: ._A007_A033_0202CB_001.analysis.json  ._A007_B033_0203I5_001.analysis.json  ._A007_C033_02038F_001.analysis.json  ._A007_D033_0203Z0_001.analysis.json  ._B007_A033_0203MX_001.analysis.json  ._B007_B033_0203VW_001.analysis.json  ._B007_C033_0203XE_001.analysis.json  ._B007_D033_0203WZ_001.analysis.json  ._C007_A033_0203HR_001.analysis.json  ._C007_B033_02039J_001.analysis.json  ._C007_C033_02035R_001.analysis.json  ._C007_D033_0203CJ_001.analysis.json  ._D007_A033_0203TE_001.analysis.json  ._D007_B033_0203Y6_001.analysis.json  ._D007_C033_0203D6_001.analysis.json  ._D007_D033_0203XI_001.analysis.json  ._E007_A033_0203JR_001.analysis.json  ._E007_B033_02030T_001.analysis.json  ._E007_C033_020320_001.analysis.json  ._E007_D033_0203YW_001.analysis.json  ._F007_A033_0203Z0_001.analysis.json  ._F007_B033_0203KK_001.analysis.json  ._F007_C033_020379_001.analysis.json  ._F007_D033_02032N_001.analysis.json  ._G007_A033_0203SO_001.analysis.json  ._G007_B033_0203T6_001.analysis.json  ._G007_C033_0203MH_001.analysis.json  ._G007_D033_0203E0_001.analysis.json  ._H007_A033_0203T3_001.analysis.json  ._H007_B033_02034L_001.analysis.json  ._H007_C033_0203VC_001.analysis.json  ._H007_D033_0203D0_001.analysis.json  ._I007_A033_0203BR_001.analysis.json  ._I007_B033_02039Q_001.analysis.json  ._I007_C033_0203HZ_001.analysis.json  ._I007_D033_0203KV_001.analysis.json  A007_A033_0202CB_001.analysis.json  A007_B033_0203I5_001.analysis.json  A007_C033_02038F_001.analysis.json  A007_D033_0203Z0_001.analysis.json  (+32 more)
out_scene/sidecars/: ._A007_A033_0202CB_001.sidecar.json  ._A007_B033_0203I5_001.sidecar.json  ._A007_C033_02038F_001.sidecar.json  ._A007_D033_0203Z0_001.sidecar.json  ._B007_A033_0203MX_001.sidecar.json  ._B007_B033_0203VW_001.sidecar.json  ._B007_C033_0203XE_001.sidecar.json  ._B007_D033_0203WZ_001.sidecar.json  ._C007_A033_0203HR_001.sidecar.json  ._C007_B033_02039J_001.sidecar.json  ._C007_C033_02035R_001.sidecar.json  ._C007_D033_0203CJ_001.sidecar.json  ._D007_A033_0203TE_001.sidecar.json  ._D007_B033_0203Y6_001.sidecar.json  ._D007_C033_0203D6_001.sidecar.json  ._D007_D033_0203XI_001.sidecar.json  ._E007_A033_0203JR_001.sidecar.json  ._E007_B033_02030T_001.sidecar.json  ._E007_C033_020320_001.sidecar.json  ._E007_D033_0203YW_001.sidecar.json  ._F007_A033_0203Z0_001.sidecar.json  ._F007_B033_0203KK_001.sidecar.json  ._F007_C033_020379_001.sidecar.json  ._F007_D033_02032N_001.sidecar.json  ._G007_A033_0203SO_001.sidecar.json  ._G007_B033_0203T6_001.sidecar.json  ._G007_C033_0203MH_001.sidecar.json  ._G007_D033_0203E0_001.sidecar.json  ._H007_A033_0203T3_001.sidecar.json  ._H007_B033_02034L_001.sidecar.json  ._H007_C033_0203VC_001.sidecar.json  ._H007_D033_0203D0_001.sidecar.json  ._I007_A033_0203BR_001.sidecar.json  ._I007_B033_02039Q_001.sidecar.json  ._I007_C033_0203HZ_001.sidecar.json  ._I007_D033_0203KV_001.sidecar.json  A007_A033_0202CB_001.sidecar.json  A007_B033_0203I5_001.sidecar.json  (+34 more)
out_scene_red/: summary.json
out_scene_v2/: summary.json
scripts/: _r3dmatch_env.sh  build_macos_app.sh  build_red_sdk_bridge.sh  compare-results.sh  package_macos_app.sh  run-prototype.sh  run_local_demo.sh  run_r3dmatch_ingest.sh  run_r3dmatch_review.sh  run_r3dmatch_web.sh
src/r3dmatch/native/: CMakeLists.txt  rcp2_live_bridge.c  red_sdk_bridge.cpp
tests/: test_cli.py  test_pipeline.py  test_sphere_detection.py
tools/: Test_Footage_064_UnderExposedGD_BACKUP_session12.json  analyze_neutrality.py  characterize_pipeline.py  golden_regression.py  live_camera_test.command  live_camera_test.py  metadata_response_probe.py  probe_canny.py  probe_dhc.py  probe_hough_alt.py  probe_specular.py  rank_candidates.py  rank_candidates_v2.py  rank_candidates_v3.py  rank_candidates_v4.py  red_forensics.py  refresh_icon.command  run_delivery.py  scene_linear_match_probe.py  scene_linear_wb_probe.py  sphere_doctor.py  sphere_gate_probe.py  terminator_probe.py  test_capture.py
txt/: R3DSplat.rtf
(+226 files in other folders)
